--- a/css/BMS.css
+++ b/css/BMS.css
@@ -121,15 +121,18 @@ body {
 .navigation a {
     text-decoration: none;
     color: white;
+    text-align: center;
 }
 
 .sideMenu {
     display: none;
     width: 35px;
     height: 30px;
+    padding: 10px 10px 0;
 }
 .sideMenu:hover {
     cursor: pointer;
+    background-color: rgba(12,12,13,0.86);
 }
 .sideMenu div {
     height: 5px;
@@ -208,7 +211,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     margin: 0 0 25px 0;
 }
 .apply {
-    width: 270px;
+    /*width: 270px;*/
     cursor: pointer;
     font-weight: bold;
     text-transform: uppercase;
@@ -415,6 +418,31 @@ h1 {
 }
 .applyBtn {
     margin-bottom: 100px;
+}
+.aboutUsWrap2 {
+    background: none;
+    padding-top: 0;
+}
+.ImgPlaceWrap {
+    display: flex;
+    flex-direction: column;
+}
+.ImgPlace {
+    display: flex;
+    justify-content: center;
+    padding: 0 50px;
+}
+.ImgPlace div {
+    text-align: center;
+}
+.ImgPlace div img{
+    width: 260px;
+    height: 90px;
+}
+@media(min-width: 0px) and (max-width: 850px) {
+    .ImgPlace {
+        flex-direction: column;
+    }
 }
 .apply1 {
     width: 300px;
@@ -632,6 +660,7 @@ textarea {
 }
 .footer a:hover {
     color: dimgrey;
+    background-color: rgba(12,12,13,0.86);
 }
 .footer .connectUs:hover {
     color: deepskyblue;
@@ -685,6 +714,7 @@ textarea {
 }
 .btnContact a:hover {
     color: black;
+    background: none;
 }
 .footerNetwork {
     display: flex;
@@ -747,7 +777,7 @@ textarea {
     background: url("../img/backgroundAbout3.jpg");
     background-size: cover;
     transition: all 0.30s ease-in-out;
-    border-radius: 0 0 0 50%;
+    border-radius: 20% 0 0 20%;
 }
 .mobSideMenu ul {
     list-style: none;
@@ -755,16 +785,18 @@ textarea {
 }
 .mobSideMenu li {
     margin-bottom: 15px;
+    border-bottom: 1px solid goldenrod;
 }
 .mobSideMenu a {
     text-decoration: none;
     color: white;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 24px;
+    /*font-weight: bold;*/
 }
 .mobSideMenu a:hover {
     cursor: pointer;
     color: gold;
+    background-color: rgba(12,12,13,0.86);
 }
 .linkToStart {
     text-decoration: none;
@@ -889,7 +921,7 @@ a {
     color: black;
 }
 a:hover {
-    text-decoration: underline;
+    1text-decoration: underline;
 }
 .sabmenu {
     display: none;
@@ -898,6 +930,16 @@ a:hover {
 }
 .active .sabmenu {
     display: block;
+}
+.thankyou {
+    text-align: center;
+    padding: 0 50px 50px;
+}
+.thankyou h2{
+    font-size: 38px;
+    background: url(../img/background.png) -235px 50px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 @media(min-width: 0px) and (max-width: 1100px) {
@@ -1080,6 +1122,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
         margin-bottom: 75px;
         padding-top: 260px;
     }
+    .aboutUsWrap2 {
+        padding-top: 0;
+    }
     .aboutUs h2 {
         font-size: 55px;
 
@@ -1200,6 +1245,11 @@ and (-webkit-min-device-pixel-ratio: 3) {
         border: solid 17px deepskyblue;
         border-radius: 50%;
         padding: 25px;
+    }
+    .telegram:hover {
+        background: url("../img/telegram.png") 17px -125px no-repeat;
+        animation-name: none;
+        background-color: rgba(12,12,13,0.86);
     }
     .telegramFooterWrap {
         margin: 0 auto;
@@ -1438,6 +1488,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
         margin-bottom: 75px;
         padding-top: 260px;
     }
+    .aboutUsWrap2 {
+        padding-top: 0;
+    }
     .aboutUs h2 {
         font-size: 55px;
 
@@ -1558,6 +1611,11 @@ and (-webkit-min-device-pixel-ratio: 2) {
         border: solid 17px deepskyblue;
         border-radius: 50%;
         padding: 25px;
+    }
+    .telegram:hover {
+        background: url("../img/telegram.png") 17px -125px no-repeat;
+        animation-name: none;
+        background-color: rgba(12,12,13,0.86);
     }
     .telegramFooterWrap {
         margin: 0 auto;
