--- a/css/BMS.css
+++ b/css/BMS.css
@@ -67,8 +67,8 @@ body {
     width: 45px;
     height: 45px;
     position: absolute;
-    top: 0;
-    left: -55px;
+    top: 8px;
+    left: -45px;
     content: "";
     background: url("../img/logoTop.jpg") no-repeat;
     background-size: contain;
@@ -319,7 +319,7 @@ h1 {
 
 }
 .logoText {
-    font-size: 34px;
+    font-size: 20px;
     background: url(../img/Gold.jpg) -320px 200px;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
